k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fiap-app
  labels:
    environment: development
  annotations:
    owner: "Carlos Alberto Filho"
