k8s/deployment-persistencia-arm64.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistencia-api
  namespace: fiap-app
  labels:
    app: persistencia-api
    tier: backend
    app.kubernetes.io/name: persistencia-api
    app.kubernetes.io/part-of: fiap-contatos
    app.kubernetes.io/component: backend
  annotations:
    description: "Deployment para o microsserviço persistencia-api"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: persistencia-api
  template:
    metadata:
      labels:
        app: persistencia-api
        tier: backend
        environment: development
      annotations:
        pod-version: "v1"
    spec:
      containers:
        - name: persistencia-api
          image: carlosalbertofilho/fiap-contatos-persistencia-api:arm64-latest 
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: persistencia-data
              mountPath: /app/data
      volumes:
        - name: persistencia-data
          persistentVolumeClaim:
            claimName: pvc-persistencia
