k8s/deployment-persistencia.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistencia-api
  namespace: fiap-app
  labels:
    app: persistencia-api
    tier: backend
  annotations:
    description: "Deployment para o microsserviço persistencia-api"
spec:
  replicas: 1 # ajuste conforme a necessidade de escalabilidade
  selector:
    matchLabels:
      app: persistencia-api
  template:
    metadata:
      labels:
        app: persistencia-api
        tier: backend
        environment: development
      annotations:
        pod-version: "v1"
    spec:
      containers:
        - name: persistencia-api
          image: carlosalbertofilho/fiap-contatos-persistencia-api:arm64-latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: persistencia-data
              mountPath: /app
      volumes:
        - name: persistencia-data
          persistentVolumeClaim:
            claimName: pvc-persistencia
