k8s/deployment-sqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: fiap-app
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssql-data
              mountPath: /var/opt/mssql
          livenessProbe:
            exec:
              command:
                - /opt/mssql-tools18/bin/sqlcmd
                - -S
                - localhost
                - -U
                - SA
                - -P
                - 1q2w3e4r@#$
                - -Q
                - "SELECT 1"
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: pvc-sqlserver
