k8s/service-cadastro.yaml
apiVersion: v1
kind: Service
metadata:
  name: cadastro-api
  namespace: fiap-app
  labels:
    app: cadastro-api
spec:
  ports:
    - port: 8082
      targetPort: 8080
  selector:
    app: cadastro-api
  type: ClusterIP
