k8s/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: fiap-app
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana
  type: ClusterIP
