k8s/service-prometheus.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: fiap-app
  labels:
    app: prometheus
spec:
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
