k8s/service-rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: fiap-app
  labels:
    app: rabbitmq
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app: rabbitmq
  type: ClusterIP
