k8s/service-sqlserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
  namespace: fiap-app
  labels:
    app: sqlserver
spec:
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: sqlserver
  type: ClusterIP
